cf_analysis_results/checkerframework_3.42.0_results_WPI/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../dataset/june2020_dataset/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:38: error: (required.method.not.called) $$ 4 $$ method close $$ reader $$ java.io.FileInputStream $$ possible exceptional exit due to new ObjectInputStream(reader) with exception type java.io.IOException $$ ( 619, 676 ) $$ @MustCall method close may not have been invoked on reader or any of its aliases.
            FileInputStream reader = new FileInputStream(outputfile);
                            ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(reader) with exception type java.io.IOException
../dataset/june2020_dataset/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:84: error: (required.method.not.called) $$ 4 $$ method close $$ writer $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream(writer) with exception type java.io.IOException $$ ( 1871, 1930 ) $$ @MustCall method close may not have been invoked on writer or any of its aliases.
            FileOutputStream writer = new FileOutputStream(outputfile);
                             ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(writer) with exception type java.io.IOException
2 errors
